--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -24,7 +24,7 @@ en:
       password_updated:
         subject: 'Password change notification'
       account_locked:
-        subject: 'Your Upaya account has been locked'
+        subject: 'Your Login.gov account has been locked'
     omniauth_callbacks:
       failure: "Could not authenticate you due to: %{reason}."
       success: "Third party authentication successful!"
@@ -44,7 +44,7 @@ en:
       signed_up: "Welcome! You have signed up successfully."
       signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
       signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A Upaya Account confirmation email has been sent to %{email}. Please follow the instructions in the email to confirm your Upaya Account request. If you do not receive the confirmation email within the next 10 minutes, please return to this page and request your confirmation instructions again."
+      signed_up_but_unconfirmed: "A Login.gov account confirmation email has been sent to %{email}. Please follow the instructions in the email to confirm your Login.gov account request. If you do not receive the confirmation email within the next 10 minutes, please return to this page and request your confirmation instructions again."
       email_update_needs_confirmation: >
         You updated your account successfully, but we need to verify your new
         email address. Please check your email and follow the confirm link to
