Use Form Objects to handle validations
**Why**: Since we allow the user to create their account in multiple
steps, some validations don't apply all the time. Instead of adding
conditional logic and flags to the User model, it's cleaner to separate
responsibilities by using Form Objects for each form that only include
the validations that apply to that form.

For example, we know that when a user enters their email in the first
step, the only thing we need to validate is their email.

To make it easier to test these new forms, I updated some of the
Active Job jobs to take an email or mobile as a parameter, instead of
a User object. Strings are preferred to objects as parameters so that
you don't have to worry about deserialization errors.

--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -54,6 +54,11 @@ en:
         but we need to verify your new number first. Please follow the
         instructions below. If you do not confirm your new number, we will
         keep using your old phone number.
+      email_and_mobile_need_confirmation: >
+        Your request to update your account was processed successfully,
+        but we need to verify both your new number and new email. Please follow
+        the instructions below to verify your new number, then check your
+        email and click the confirmation link to confirm your new email address.
       updated: "Your account has been updated successfully."
       enabled_twofactor: "Successfully enabled two-factor authentication."
     sessions:
